Getting project panama seeming like it's working